[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threedsim"
version = "0.1"
description = "3D SiM"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "adjustText>=1.0",
  "tqdm>=4.60",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.7",

]
analysis = [
  "pandas>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
